[package]
name = "algs"
version = "0.1.0"
authors = ["iy"]
edition = "2018"

[[bin]]
name = "fib"
path = "src/fib.rs"

[[bin]]
name = "gcd"
path = "src/gcd.rs"

[[bin]]
name = "list"
path = "src/linked_list.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
